--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -142,7 +142,7 @@
   - path = request.path.split("/")[2]
   - path = "l_accademia" if ["/", ""].include? request.path
   - not_home = path != "l_accademia"
-  %body.bg-black{ class: "#{controller.controller_name} #{controller.action_name} #{"master" if master?} #{"admin" if admin?} #{path} #{"not-home" if not_home}"}
+  %body{ class: "#{controller.controller_name} #{controller.action_name} #{"master" if master?} #{"admin" if admin?} #{path} #{"not-home" if not_home}"}
     .separator50
     #cookies.cookie_bar.line-compress.color-white.hidden.fixed.top
       .separator5
@@ -168,11 +168,68 @@
               .separator2
       .separator10.tablet.mobile
       .separator10
-    / mobile menu
-    %a#btnMenu.absolute.top.right.color-white.mobile.tablet.center-content.layer4{:href => "javascript:void(0)", :onclick => "$(this).toggleClass('rotate bg-primary'); $('#menuMobile').toggleClass('hide');"}
-      %i.fa.fa-bars
-    %a
-      #menuMobile.overlay.over-y-scroll.color-white.center-content.hide.layer2
+    #top-menu-social.color-white
+      .line-compress.top-menu
+        .separator5
+        .top-menu-social.col4
+          &nbsp;
+          %a{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
+            %i.fa.fa-facebook-official
+          %a{:href => "http://twitter.com/Acc_Cappiello", :target => "_blank"}
+            %i.fa.fa-twitter
+          %a{:href => "http://instagram.com/accademiacappiello", :target => "_blank"}
+            %i.fa.fa-instagram
+          %a{:href => "http://www.flickr.com/photos/accademiacappiello/", :target => "_blank"}
+            %i.fa.fa-flickr
+          %a{:href => "http://vimeo.com/user5798268", :target => "_blank"}
+            %i.fa.fa-vimeo
+          .separator3
+          .separator1
+        .col5.top-menu-right.push-right
+          .desktop
+            .separator3
+            %span
+              %ul.line.right-content
+                %li.line.right-content
+
+                  %a.bg-muted.color-white.radius20.toggle-opacity-inverse-hover{:href => "#"}
+                    %small
+                      &nbsp;&nbsp; #{tf "AREA UTENTI", "ACCOUNT"} &nbsp;&nbsp;
+
+                  %a.color-white.toggle-opacity-inverse-hover.smooth-scroll{:href => "#contatti"}
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    %i.fa.fa-phone.color-white
+                      #{tf "Telefono", "Telephone"} &nbsp;&nbsp;
+                  %a.color-white.toggle-opacity-inverse-hover{:href => "mailto:info@accademiacappiello.it"}
+                    &nbsp;&nbsp;&nbsp;
+                    %i.fa.fa-envelope.color-white
+                    &nbsp;&nbsp;Email &nbsp;&nbsp;
+                  %span
+                    = tf "Lingua", "Language"
+                    %a.font-medium{ href: "http://#{host_it}", class: "#{"color-#{it? ? "primary" : "white"}"}" } Italiano
+                    %span
+                      |
+                    %a.font-medium{ href: "http://#{host_en}", class: "#{"color-#{en? ? "primary" : "white"}" }" } English
+      #slide.line.bg-white
+        .line-compress.line-max.header#top-menu
+          .col2.line-tablet.center-content-tablet
+            .separator3
+            %a{:href => "/#accademia"}
+              %img.logo-scrolling{:src => "/images/logo.png"}
+              %img.logo{:src => "/images/logo-white.png"}
+
+          .col8.right-content.desktop
+            .header-menu.desktop
+              %a#link-accademia.smooth-scroll{ href: "/#accademia" }= tf "L'Accademia", "The Accademia"
+              %a#link-corsi.smooth-scroll{ href: "/#corsi" }= tf "Corsi", "Courses"
+              - nav_link :news
+              %a#link-gallery.smooth-scroll{ href: "/#gallery" } Gallery
+              %a#link-borse-di-studio.smooth-scroll{ href: "/#borse-di-studio" }= tf "Borse di studio", "Scolarships"
+              %a#link-open-days.smooth-scroll{ href: "/#open-days" } Open Days
+              %a#link-contatti.smooth-scroll{ href: "/#contatti" }= tf "Contatti", "Contacts"
+              -# nav_link :contatti
+      / mobile menu
+      #menuMobile.overlay.over-y-scroll.color-white.center-content.hide.layer2{:style => 'z-index:-1;'}
         .separator30
         .separator10
         .col6.offset-left2.radius3
@@ -208,72 +265,8 @@
           Email
         .separator50
         .separator30
-      / end mobile menu
-      / social top nav
-      / end social nav
-      / header and menu
-      #top-menu-social.color-white
-        .line-compress.top-menu
-          .separator5
-          .top-menu-social.col4
-            &nbsp;
-            %a{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
-              %i.fa.fa-facebook-official
-            %a{:href => "http://twitter.com/Acc_Cappiello", :target => "_blank"}
-              %i.fa.fa-twitter
-            %a{:href => "http://instagram.com/accademiacappiello", :target => "_blank"}
-              %i.fa.fa-instagram
-            %a{:href => "http://www.flickr.com/photos/accademiacappiello/", :target => "_blank"}
-              %i.fa.fa-flickr
-            %a{:href => "http://vimeo.com/user5798268", :target => "_blank"}
-              %i.fa.fa-vimeo
-            .separator3
-            .separator1
-          .col5.top-menu-right.push-right
-            .desktop
-              .separator3
-              %span
-                %ul.line.right-content
-                  %li.line.right-content
-
-                    %a.bg-muted.color-white.radius20.toggle-opacity-inverse-hover{:href => "#"}
-                      %small
-                        &nbsp;&nbsp; #{tf "AREA UTENTI", "ACCOUNT"} &nbsp;&nbsp;
-
-                    %a.color-white.toggle-opacity-inverse-hover.smooth-scroll{:href => "#contatti"}
-                      &nbsp;&nbsp;&nbsp;&nbsp;
-                      %i.fa.fa-phone.color-white
-                        #{tf "Telefono", "Telephone"} &nbsp;&nbsp;
-                    %a.color-white.toggle-opacity-inverse-hover{:href => "mailto:info@accademiacappiello.it"}
-                      &nbsp;&nbsp;&nbsp;
-                      %i.fa.fa-envelope.color-white
-                      &nbsp;&nbsp;Email &nbsp;&nbsp;
-                    %span
-                      = tf "Lingua", "Language"
-                      %a.font-medium{ href: "http://#{host_it}", class: "#{"color-#{it? ? "primary" : "white"}"}" } Italiano
-                      %span
-                        |
-                      %a.font-medium{ href: "http://#{host_en}", class: "#{"color-#{en? ? "primary" : "white"}" }" } English
-          .separator5
-      #slide.line.bg-white
-        .line-compress.line-max.header#top-menu
-          .col2.line-tablet.center-content-tablet
-            .separator3
-            %a{:href => "/#accademia"}
-              %img.logo-scrolling{:src => "/images/logo.png"}
-              %img.logo{:src => "/images/logo-white.png"}
-
-          .col8.right-content.desktop
-            .header-menu.desktop
-              %a#link-accademia.smooth-scroll{ href: "/#accademia" }= tf "L'Accademia", "The Accademia"
-              %a#link-corsi.smooth-scroll{ href: "/#corsi" }= tf "Corsi", "Courses"
-              - nav_link :news
-              %a#link-gallery.smooth-scroll{ href: "/#gallery" } Gallery
-              %a#link-borse-di-studio.smooth-scroll{ href: "/#borse-di-studio" }= tf "Borse di studio", "Scolarships"
-              %a#link-open-days.smooth-scroll{ href: "/#open-days" } Open Days
-              %a#link-contatti.smooth-scroll{ href: "/#contatti" }= tf "Contatti", "Contacts"
-              -# nav_link :contatti
-
+      %a#btnMenu.absolute.top.right.color-white.mobile.tablet.center-content.layer4{:href => "javascript:void(0)", :onclick => "$(this).toggleClass('rotate bg-primary'); $('#menuMobile').toggleClass('hide');"}
+        %i.fa.fa-bars
       / end header and menu
 
       / --------------content
