--- a/app/views/pages_new/_footer.haml
+++ b/app/views/pages_new/_footer.haml
@@ -1,5 +1,6 @@
 / footer
 %footer.footer.bg-black
+  .separator30
   .line.line-footer.bg-black
     .col4.line-tablet.center-content-tablet
       %img{src: "/images/logo-footer.png", width: "200"}
