--- a/app/views/pages_new/_home_slider.html
+++ b/app/views/pages_new/_home_slider.html
@@ -1,6 +1,6 @@
 
 	<!-- SLIDER EXAMPLE -->
-	<section class="example">
+	<section class="example carousel">
 		<article class="content">
 			<div id="rev_slider_2_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-alias="classic-carousel2" style="margin:0px auto;background-color:#ffffff;padding:0px;margin-top:0px;margin-bottom:0px;">
 
@@ -605,7 +605,7 @@
 								speed:2000,
 								levels:[2,3,4,5,6,7,12,16,10,50],
 							},
-							shadow:5,
+							shadow:0,
 							spinner:"off",
 							stopLoop:"off",
 							stopAfterLoops:-1,
