--- a/app/views/pages_new/_home_slider.html
+++ b/app/views/pages_new/_home_slider.html
@@ -1,4 +1,4 @@
-
+<div class="line">
 	<!-- SLIDER EXAMPLE -->
 	<section class="example carousel">
 		<article class="content">
@@ -628,4 +628,5 @@
 			</script>
 		</article>
 	</section>
-	<div class="clearfix"></div>
+	<div class="separator5"></div>
+</div>
