--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -5,7 +5,7 @@
       - pages.each_with_index do |page, idx|
         - if idx == 1
           %li
-            = link_to "News", [:posts]
+            = link_to "News Blog", [:posts]
         - case page.title_url_en
         - when "annual_courses"
           %li
