interessi product design

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -18,7 +18,9 @@
       = f.check_box :int_annuali_visual
       = f.label     :int_annuali_visual,    "#{tf "GRAFICA PUBBLICITARIA - Annuale", "GRAPHIC DESIGN - 1 year Course"}"
       = f.check_box :int_annuali_interior
-      = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "Corso Annuale", "1 Year Course"}"
+      = f.label     :int_annuali_interior,  "PRODUCT DESIGN - #{tf "Corso Annuale", "1 Year Course"}"
+      = f.check_box :int_annuali_product
+      = f.label     :int_annuali_product,  "PRODUCT DESIGN - #{tf "Corso Annuale", "1 Year Course"}"
       = f.check_box :int_annuali_web
       = f.label     :int_annuali_web,  "DIGITAL COMMUNICATION"
       = f.check_box :int_master_visual
