--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -5,6 +5,7 @@
 
   - show_selection :int_annuali_visual, "Corso annuale Grafica Pubblicitaria"
   - show_selection :int_annuali_interior, "Corso annuale Interior Design"
+  - show_selection :int_annuali_product, "Corso annuale Product Design"
   - show_selection :int_annuali_web, "Corso annuale Digital Communication"
   - show_selection :int_master_visual, "Master Graphic Design"
   - show_selection :int_master_interior, "Master Interior Design"
