--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -127,3 +127,17 @@
     %noscript
       %div{:style => "display:inline;"}
         %img{:alt => "", :height => "1", :src => "//googleads.g.doubleclick.net/pagead/viewthroughconversion/1048016950/?value=0&amp;guid=ON&amp;script=0", :style => "border-style:none;", :width => "1"}/
+
+    :plain
+      <script>
+      !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+      n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+      document,'script','https://connect.facebook.net/en_US/fbevents.js');
+
+      fbq('init', '1434976770127028');
+      fbq('track', "PageView");</script>
+      <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1434976770127028&ev=PageView&noscript=1"
+      /></noscript>
