preferenza borsa product design

--- a/app/views/forms/_borse_di_studio.html.haml
+++ b/app/views/forms/_borse_di_studio.html.haml
@@ -10,6 +10,8 @@
       = f.radio_button :interested_in, "interior", class: "radio"
       = f.label :interested_in_web, "DIGITAL COMMUNICATION"
       = f.radio_button :interested_in, "web", class: "radio2"
+      = f.label :interested_in_product, "PRODUCT DESIGN"
+      = f.radio_button :interested_in, "product", class: "radio2"
 
     .first
       = f.label :first_name, tf("Nome", "Name")
