--- a/app/views/forms/_borse_di_studio.html.haml
+++ b/app/views/forms/_borse_di_studio.html.haml
@@ -11,7 +11,7 @@
       = f.label :interested_in_web, "DIGITAL COMMUNICATION"
       = f.radio_button :interested_in, "web", class: "radio"
       = f.label :interested_in_product, "PRODUCT DESIGN"
-      = f.radio_button :interested_in, "product", class: "radio2"
+      = f.radio_button :interested_in, "product", class: "radio"
 
     .first
       = f.label :first_name, tf("Nome", "Name")
