fashion communication & trends

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -13,6 +13,7 @@
               %li= link_to tf("Grafica Pubblicitaria e Comunicazione", "Graphic Design and Communication"), page_path(id: tf("grafica_pubblicitaria_corsi_annuali", "graphic_design_annual_training"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corsi_annuali", "interior_design_annual_training"))
               %li= link_to "Product Design", page_path(id: tf("product_design_corso_annuale", "product_design_annual_training"))
+              %li= link_to "Fashion Communication & Trends", page_path(id: tf("fashion_communication_trends_annuale", "fashion_communication_trends"))
               %li= link_to "Digital Communication", page_path(id: tf("digital_communication_design_annuale", "web_communication_design"))
             = link_to tf("Corsi annuali", "Annual Courses"), js_void
         - when "master_courses"
