--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -23,6 +23,8 @@
       = f.label     :int_annuali_product,  "PRODUCT DESIGN - #{tf "Corso Annuale", "1 Year Course"}"
       = f.check_box :int_annuali_web
       = f.label     :int_annuali_web,  "DIGITAL COMMUNICATION"
+      = f.check_box :int_annuali_fashion
+      = f.label     :int_annuali_fashion,  "FASHION COMMUNICATION & TRENDS - #{tf "Corso Annuale", "1 Year Course"}"
       = f.check_box :int_master_visual
       = f.label     :int_master_visual,    "#{tf "GRAPHIC DESIGN - Master", "GRAPHIC DESIGN - Master"}"
       = f.check_box :int_master_interior
